# tokenization-and-mt

./: .gitignore  Dockerfile  environment.yml  param_array.json  param_array.py  preprocessing.py  pyproject.toml  rosenthal_rewriter.py  sampling.py  tokenization_analyzer.py  tokenization_corpus_analyzer.py  tokenization_feature_analyzer.py  tokenization_morphology_analyzer.py  tokenization_morphology_sampler.py  tokenization_paradigm_analyzer.py  tokenization_paradigm_sampler.py
.github/workflows/: formatting.yml  main.yml  pytest.yml
data/rosenthal/original/: .gitkeep
data/vulgate/: .gitkeep
tests/: test_beam_search.py
translation/: config.toml  decoder.py  layers.py  main.py  manager.py  model.py  preprocess.py  sampling.py  translate.py
utils/data/: parquet_loader.py  token_calc.py  tokenization_analysis.csv  vulgate_loader.py
utils/data/corpora/: __init__.py  base_loader.py  constants.py  corpus_corporum_loader.py  latin_bert_loader.py  latin_loader.py
utils/data/unimorph/: __init__.py  constants.py  corpus.py  dimension.py  feature.py  mapping.py  preprocessors.py  types.py
utils/metrics/tokenization/: __init__.py  constants.py  constructors.py  helpers.py  metrics.py  tables.py  types.py  writers.py
