[project]
name = "translation"
version = "1.0.0"
description = "Neural Machine Translation System"
license = { text = "MIT" }
authors = [{ name = "Ken Sible", email = "ksible@nd.edu" }]
requires-python = ">=3.12"
dependencies = [
    "sacremoses>=0.1.1",
    "subword-nmt>=0.3.8",
    "sentencepiece>=0.2.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
cpu = ["torch>=2.7.1"]
cu128 = ["torch>=2.7.1"]

[dependency-groups]
metrics = ["sacrebleu>=2.5.1", "unbabel-comet>=2.2.6", "bert-score>=0.3.13"]
dev = ["ruff>=0.12.4", "mypy>=1.17.0", "pytest>=8.4.1"]
crc = ["qfunnel@git+https://github.com/bdusell/qfunnel.git"]

[project.scripts]
translate = "translation.translate:main"

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu128" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"
